application_examples/simple_messageboard/kubernetes/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messageboard-db
  namespace: smapp
  labels:
    app: messageboard-db
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
    name: mariadb
  selector:
    app: messageboard-db
