application_examples/simple_messageboard/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messageboard
  namespace: smapp
  labels:
    app: messageboard
spec:
  type: ClusterIP
  selector:
    app: messageboard
  ports:
  - port: 80
    targetPort: 80
