application_examples/simple_messageboard/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messageboard
spec:
  tls:
  - hosts:
    - msgb.test
    secretName: msgb-tls
  rules:
  - host: msgb.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messageboard
            port:
              number: 80
